# GameEngine

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  install_manifest.txt
.VSCodeCounter/2025-07-05_14-14-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-06_12-10-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-07_22-33-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-08_23-53-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-12_22-52-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  (+4 more)
Libs/: CMakeLists.txt
Source/: CMakeLists.txt  Context.h  Game.cpp  Game.h  Main.cpp  Ray  Sources.cmake  UserGame.hpp
Source/Game/: Component.h  Entity.cpp  Entity.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h
Source/Game/Components/: BackgroundComponent.hpp  ColliderComponent.hpp  EnemyMovementComponent.hpp  EnemyShootComponent.hpp  PlayerMovementComponent.hpp  ShootComponent.hpp  SpinComponent.hpp  SpriteComponent.hpp
Source/Input/: Input.cpp
Source/MathLib/: MathLib.h
Source/MathLib/Vector/: VectorOperations.hpp
Source/Physics/: Body.cpp  Body.h  Shapes.cpp  Shapes.h
Source/Visuals/: AnimatedSprite.cpp  AnimatedSprite.h
(+28 files in other folders)
